--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -48,14 +48,12 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'me.tatarka.support:jobscheduler:0.1.1'
-
     //old
-//    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
-//        exclude module: 'support-v4'
-//}
+    //    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
+    //        exclude module: 'support-v4'
+    //}
     //new
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
-
     compile 'com.google.code.gson:gson:2.8.2'
 }
