--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
+    //compile 'com.google.android.gms:play-services-maps:11.0.4'
+    implementation "com.android.support:support-compat:25.4.0"
     compile 'me.tatarka.support:jobscheduler:0.1.1'
 
     //old
