--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -48,7 +49,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
-    implementation "com.android.support:support-compat:25.4.0"
+    //implementation "com.android.support:support-compat:25.4.0"
     compile 'me.tatarka.support:jobscheduler:0.1.1'
     //old
     //    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
