--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,35 +5,37 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="24"
-        android:maxSdkVersion="27"
-        />
+        android:maxSdkVersion="27"/>
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
+    <permission
+        android:name="com.example.lzyang.fyptest.DetailActivity.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
 
-    <permission android:name="com.example.lzyang.fyptest.DetailActivity.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
-    <uses-permission android:name="com.example.lzyang.fyptest.DetailActivity.permission.MAPS_RECEIVE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="com.example.lzyang.fyptest.DetailActivity.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -44,15 +46,15 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyATBVhCtTSofEA1MyBTdAF6mw7OrInhKhE"/>
-
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="AIzaSyATBVhCtTSofEA1MyBTdAF6mw7OrInhKhE" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".LoginActivity"
-            android:noHistory="true"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -63,8 +65,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RequestActivity"
             android:parentActivityName=".MainActivity" />
@@ -77,17 +78,17 @@
         <activity
             android:name=".HelpInfoActivity"
             android:parentActivityName=".MainActivity" />
-
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".Functions.LoadingActivity"/>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".Functions.LoadingActivity" />
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
         <service
             android:name=".ServerModule.MJobScheduler"
-            android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="true"
-            />
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
+        <activity android:name=".ResetPassword" />
+        <activity android:name=".EditProfileActivity"></activity>
     </application>
 
 </manifest>
