--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
@@ -51,6 +50,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     //implementation "com.android.support:support-compat:25.4.0"
     compile 'me.tatarka.support:jobscheduler:0.1.1'
+    compile 'com.android.volley:volley:1.1.0'
     //old
     //    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
     //        exclude module: 'support-v4'
@@ -59,4 +59,6 @@ dependencies {
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     compile 'com.google.code.gson:gson:2.8.2'
+    implementation files('build/mail.jar')
+    implementation files('build/activation.jar')
 }
